@@ -793,7 +793,9 @@ defconfig -- This is a configuration file similar to the Linux
     CONFIG_STMPE11_MULTIPLE 
       Can be defined to support multiple STMPE11 devices on board.
     CONFIG_STMPE11_ACTIVELOW
-      Interrupt is generated by an active low signal.
+      Interrupt is generated by an active low signal (or falling edge).
+    CONFIG_STMPE11_EDGE
+      Interrupt is generated on an edge (vs. on the active level)
     CONFIG_STMPE11_NPOLLWAITERS
       Maximum number of threads that can be waiting on poll() (ignored if 
       CONFIG_DISABLE_POLL is set).
